# hubble

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  README.md  go.mod  go.sum  hubble.go  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cmd/hubble/: main.go
examples/: get-customer-credentials.py  hubblerc-rackspace.sample
hubble/: __init__.py  config.py  keys.py  shell.py
hubble/tests/: test_shell.py
hubble/tests/unit/: fake_configs.py  test_config.py  test_hubble.py
tests/: test_hubble.py
