[metadata]
name = hubble
summary = Environment Variable Manager
author = Derrick J. Wippler
author-email = thrawn01@gmail.com
home-page = http://thrawn01.org/hubble
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    hubble

[entry_points]
console_scripts =
    hubble-keyring = hubble.keys:main
    hubble = hubble.shell:main
